--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,18 @@
     "firestore": {
       "port": 8080,
       "host": "0.0.0.0"
-    }
+    },
+    "hub": {
+      "host": "0.0.0.0",
+      "port": 4400
+    },
+    "logging": {
+      "host": "0.0.0.0",
+      "port": 4500
+    },
+    "ui": {
+      "host": "0.0.0.0",
+      "port": 4000
+    }    
   }
 }
