--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,7 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '38 6 * * *'
+  workflow_dispatch:
   push:
     branches: [ main ]
     # Publish semver tags as releases.
